fix: prevent overflowed height

--- a/src/components/Image/Image.st.css
+++ b/src/components/Image/Image.st.css
@@ -1,13 +1,13 @@
 :import {
-  -st-from: "../../common/formatters.st";
+  -st-from: '../../common/formatters.st';
   -st-named: color, fallback;
 }
 
 /*Defaults*/
 :vars {
-  defaultBorderWidth: 0px;
-  defaultBorderRadius: 0px;
-  defaultImageOpacity: 100%;
+  defaultborderwidth: 0px;
+  defaultborderradius: 0px;
+  defaultimageopacity: 100%;
 }
 
 /* Overrides */
@@ -15,35 +15,35 @@
   /*
     A background color by a color from the palette for the container
   */
-  BackgroundColor: --overridable;
+  backgroundcolor: --overridable;
   /*
     A border color by a color from the palette for the container
   */
-  BorderColor: --overridable;
+  bordercolor: --overridable;
   /*
     A border width in pixels for the container
     @default 0px
   */
-  BorderWidth: --overridable;
+  borderwidth: --overridable;
   /*
     A border radius in pixels for the container
     @default 0px
   */
-  BorderRadius: --overridable;
+  borderradius: --overridable;
   /*
     An opacity between 0 to 100 for the image
     @default 100%
   */
-  ImageOpacity: --overridable;
+  imageopacity: --overridable;
 }
 
 :vars {
-  backgroundColor: color(value(BackgroundColor));
-  borderColor: color(value(BorderColor));
-  borderWidth: fallback(value(BorderWidth), value(defaultBorderWidth));
-  borderRadius: fallback(value(BorderRadius), value(defaultBorderRadius));
-  imageOpacity: fallback(value(ImageOpacity), value(defaultImageOpacity));
-  blurRadius: 3px;
+  backgroundcolor: color(value(BackgroundColor));
+  bordercolor: color(value(BorderColor));
+  borderwidth: fallback(value(BorderWidth), value(defaultBorderWidth));
+  borderradius: fallback(value(BorderRadius), value(defaultBorderRadius));
+  imageopacity: fallback(value(ImageOpacity), value(defaultImageOpacity));
+  blurradius: 3px;
 }
 
 @keyframes blurry-loading {
@@ -71,6 +71,7 @@
 .root.fluid .image {
   width: 100%;
   height: 100%;
+  overflow: hidden;
 }
 
 .root.preload .image {
